--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 /* GRID GERAL */
 
 .estrutura {
