--- a/style.css
+++ b/style.css
@@ -38,6 +38,38 @@ img {
 
 .header {
   grid-area: header;
+  background: linear-gradient(135deg, #84e, #b07dfb);
+  padding: 1.875rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.logo {
+  max-width: 12.5rem;
+}
+
+.header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header nav a {
+  display: block;
+  padding: 0.625rem;
+  color: #fff;
+  font-size: 1.125rem;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.header li + li {
+  margin-left: 1.875rem;
 }
 
 .sidenav {
