--- a/style.css
+++ b/style.css
@@ -109,6 +109,15 @@ img {
   grid-column: 1/-1;
 }
 
+.imagem-1 {
+  grid-row: span 2;
+  align-self: end;
+}
+
+.imagem-2 {
+  align-self: end;
+}
+
 .anuncios {
   grid-area: anuncios;
   background-color: #fafbfc;
